[workspace]
resolver = "3"
members = ["crates/faulx", "crates/procedre", "crates/helpers"]

[workspace.package]
authors = ["martabal"]
edition = "2024"
rust-version = "1.88"
license = "MIT"
homepage = "https://github.com/martabal/pstree-rs"
repository = "https://github.com/martabal/pstree-rs"

[workspace.dependencies]
clap = { version = "4.5.47", features = ["derive"] }
nix = { version = "0.30.1", features = ["signal"] }
rayon = { version = "1.11.0" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = "symbols"

[workspace.lints.clippy]
missing_errors_doc = "allow"
struct_excessive_bools = "allow"
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }
complexity = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
