[package]
name = "helpers"
version = "0.0.1"
license.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
crate-type = ["lib"]

[features]
default = ["rayon"]
rayon = ["dep:rayon"]

[dependencies]
rayon = { workspace = true, optional = true }
